tests/miniJava/neg/000552_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java class java { } 0 ; } }
